fix center align

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -26,6 +26,6 @@ main {
     flex: 1 0 auto;
 }
 
-main > img,div,span,iframe,video{
+main > img,iframe,video{
     overflow-x: scroll;
 }
